--- a/testnghw/pom.xml
+++ b/testnghw/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.10.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.0.0-alpha-4</version>
+        </dependency>
     </dependencies>
 
     <build>
